force-app/main/default/objects/Apttus_Config2__CostAdjustment__c/Apttus_Config2__CostAdjustment__c.object-meta.xml
<CustomObject>
    <description>Represents an adjustment to the cost of a product/service</description>
    <label>Cost Adjustment</label>
    <nameField>
        <displayFormat>CA-{0000000000}</displayFormat>
        <label>Cost Adjustment Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cost Adjustments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>