force-app/main/default/objects/Apttus_Config2__CostAdjustment__c/fields/Apttus_Config2__AdjustmentAmount__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__AdjustmentAmount__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Adjustment as percentage or currency amount</description>
    <label>Adjustment Amount</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>