force-app/main/default/objects/Apttus_Config2__CostAdjustment__c/fields/Apttus_Config2__AdjustmentType__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__AdjustmentType__c</fullName>
    <description>Type of cost adjustments</description>
    <label>Adjustment Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Discount Percent</fullName>
            </value>
            <value>
                <fullName>Markup Percent</fullName>
            </value>
            <value>
                <fullName>Discount Amount</fullName>
            </value>
            <value>
                <fullName>Markup Amount</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>