force-app/main/default/objects/Apttus_Config2__CostAdjustment__c/fields/Apttus_Config2__Description__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__Description__c</fullName>
    <description>Description of the discount</description>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>