force-app/main/default/objects/Apttus_Config2__CostAdjustment__c/fields/Apttus_Config2__LineItemId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__LineItemId__c</fullName>
    <description>Reference to the master line item record</description>
    <inlineHelpText>Reference to the master line item record</inlineHelpText>
    <label>Line Item</label>
    <referenceTo>Apttus_Config2__LineItem__c</referenceTo>
    <relationshipLabel>Cost Adjustments</relationshipLabel>
    <relationshipName>CostAdjustments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>